--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/App.ts",
+    "dev": "nodemon bot.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "obs-websocket-js": "^4.0.3",
     "robotjs": "^0.6.0",
     "sendkeys-macos": "^1.3.0",
     "tmi.js": "^1.8.3"
   },
   "devDependencies": {
-    "node-key-sender": "^1.0.11"
+    "@types/node": "^16.11.4",
+    "node-key-sender": "^1.0.11",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
