--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
-  "compilerOptions": {
-    "lib": [
-      "DOM",
-      "ES2015"
-    ],
-    "strictNullChecks": true,
-    "strict": true,
-    "outDir": "dist",
-    "rootDir": "src"
-  }
+    "compilerOptions": {
+        "lib": ["DOM", "ES2015"],
+        "strictNullChecks": true,
+        "strict": true,
+        "outDir": "dist",
+        "rootDir": "src",
+        "sourceMap": true
+    }
 }
