--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "lib": ["DOM", "ES2015"],
+        "lib": ["ES2015"],
         "strictNullChecks": true,
         "strict": true,
         "outDir": "dist",
         "rootDir": "src",
-        "sourceMap": true
+        "sourceMap": true,
+        "module": "commonjs"
     }
 }
