--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.4"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "src/Database/bots.json"
+        ]
     }
 }
